feat: create adaptive gallery with pokemon cards

--- a/pokemon-app/src/styles/mainStyle.scss
+++ b/pokemon-app/src/styles/mainStyle.scss
@@ -22,6 +22,7 @@ html, body {
 }
 
 .wrapper {
+    height: 100%;
     min-width: $min-screen-width;
     max-width: $max-container-width;
     width: 80%;
