--- a/pokemon-app/src/styles/variables.scss
+++ b/pokemon-app/src/styles/variables.scss
@@ -1,9 +1,13 @@
 $main-font-size: 17px;
 $main-font-family: 'Roboto', sans-serif;
+$logo-font-size: 30px;
+
 $min-screen-width: 300px;
 $max-container-width: 1200px;
 $header-footer-border-radius: 20px;
-$logo-font-size: 30px;
+$card-border-radius: 15px;
 
 $body-bg-color: #f7f7f7;
 $white-color: #fff;
+$border-red: #f92121;
+$border-green: #4cee54;
