--- a/pokemon-app/src/styles/gallery.css
+++ b/pokemon-app/src/styles/gallery.css
@@ -26,7 +26,10 @@
   width: 100%;
   height: 200px;
   border-radius: 15px;
-  box-shadow: 0px 5px 10px #84848436;
+}
+.pokemon-card .pokemon-image img {
+  width: auto;
+  height: 100%;
 }
 .pokemon-card .pokemon-name {
   height: 50px;
@@ -42,8 +45,8 @@
   width: max-content;
   height: -webkit-max-content;
   height: max-content;
-  font-size: 19px;
-  margin: 10px;
+  font-size: 16px;
+  margin: 8px;
   border-radius: 20px;
   box-shadow: 0px 5px 10px #84848436;
 }
