--- a/pokemon-app/src/styles/gallery.scss
+++ b/pokemon-app/src/styles/gallery.scss
@@ -27,7 +27,11 @@
         width: 100%;
         height: 200px;
         border-radius: $card-border-radius;
-        box-shadow: 0px 5px 10px #84848436;
+
+        img {
+            width: auto;
+            height: 100%;
+        }
     }
 
     .pokemon-name {
@@ -43,8 +47,8 @@
         .ability {
             width: max-content;
             height: max-content;
-            font-size: 19px;
-            margin: 10px;
+            font-size: 16px;
+            margin: 8px;
             border-radius: 20px;
             box-shadow: 0px 5px 10px #84848436;
 
