--- a/pokemon-app/src/styles/gallery.css
+++ b/pokemon-app/src/styles/gallery.css
@@ -24,7 +24,8 @@
 }
 .pokemon-card .pokemon-image {
   width: 100%;
-  height: 200px;
+  margin: 30px 0px;
+  height: 170px;
   border-radius: 15px;
 }
 .pokemon-card .pokemon-image img {
