--- a/pokemon-app/src/styles/gallery.scss
+++ b/pokemon-app/src/styles/gallery.scss
@@ -25,10 +25,12 @@
 
     .pokemon-image {
         width: 100%;
-        height: 200px;
+        margin: 30px 0px;
+        height: 170px;
         border-radius: $card-border-radius;
 
         img {
+            
             width: auto;
             height: 100%;
         }
