--- a/pokemon-app/src/styles/mainStyle.css
+++ b/pokemon-app/src/styles/mainStyle.css
@@ -26,6 +26,14 @@ html, body {
   width: 80%;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+a:visited, a:hover, a:active {
+  color: black;
+}
+
 @media screen and (max-width: 1280px) {
   .wrapper {
     width: 85%;
