feat: create about page first design

--- a/pokemon-app/src/styles/variables.scss
+++ b/pokemon-app/src/styles/variables.scss
@@ -11,5 +11,10 @@ $body-bg-color: #f7f7f7;
 $white-color: #fff;
 $border-red: #f92121;
 $border-green: #4cee54;
+$stat-background-color: rgb(111, 117, 204);
 
 $text-color-black: black;
+$text-color-white: rgb(238, 234, 234);
+
+$font-size-30: 30px;
+$font-size-20: 20px;
