--- a/pokemon-app/src/styles/aboutPage.scss
+++ b/pokemon-app/src/styles/aboutPage.scss
@@ -3,10 +3,118 @@
 .about {
     width: 90%;
     max-width: 700px;
-    height: 1000px;
-    background-color: #fff;
+    height: max-content;
+    background-color: $white-color;
     margin: 30px 0px;
     border-radius: $header-footer-border-radius;
     box-shadow: 0px 5px 10px #5858580f;
     padding: 20px;
+    .pokemon-header {
+        width: 100%;
+        height: max-content;
+        font-size: $font-size-30;
+        span {
+            margin: 10px 0px;
+        }
+    }
+
+    .pokemon-image {
+        width: 100%;
+        height: max-content;
+        .img-wrap {
+            width: 100%;
+            img { height: 350px;}
+        }
+    }
+
+    .abilities {
+        width: 100%;
+        height: max-content;
+        flex-wrap: wrap;
+        margin: 20px 0px;
+        .ability {
+            font-size: $font-size-20;
+            margin: 10px;
+            height: max-content;
+            width: max-content;
+            padding: 7px 10px;
+            border-radius: 10px;
+            border: 2px solid $stat-background-color;
+            &:hover {
+                cursor: pointer;
+                background-color: $stat-background-color;
+                color: $text-color-white;
+            }
+            span { margin: 10px 5px;}
+        }
+        .type {
+            background-color: rgb(113, 245, 108);
+            border-radius: 5px;
+            padding: 5px;
+            margin: 0px 10px;
+            $font-size-17: 17px;
+            font-size: $font-size-17;
+            padding: 5px 10px;
+            &:hover { cursor: pointer;}
+        }
+    }
+
+    .info {
+        height: max-content;
+        width: 100%;
+        flex-wrap: wrap;
+        .info-block {
+            background-color: indianred;
+            width: 250px;
+            height: 300px;
+            border-radius: 10px;
+            margin: 10px;
+            table {
+                width: 100%;
+                padding: 10px;
+
+                tr {
+                    height: 40px;
+                    font-size: 18px;
+                }
+            }
+            .info-header {
+                height: max-content;
+                span {
+                    margin: 15px 0px;
+                    font-size: $font-size-20;
+                }
+            }
+            .info-text {
+                padding: 10px;
+            }
+
+            .stat-wrap {
+                display: flex;
+                .stat-field {
+                    height: 10px;
+                    background-color: lawngreen;
+                    margin: 10px;
+                    border-radius: 5px;
+                }
+
+                .stat-field-1 { width: 100px; }
+                .stat-field-2 { width: 140px; }
+                .stat-field-3 { width: 60px; }
+                span {
+                    margin: 8px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .about .pokemon-header {
+        font-size: $font-size-30 - 5px;
+    }
+
+    .about .pokemon-image .img-wrap img {
+        height: 250px;
+    }
 }
