--- a/pokemon-app/src/styles/footer.scss
+++ b/pokemon-app/src/styles/footer.scss
@@ -1,14 +1,14 @@
 @import 'variables';
+@import 'font-size.module.scss';
 
 footer {
     height: max-content;
     border-top-left-radius: $header-footer-border-radius;
     border-top-right-radius: $header-footer-border-radius;
     background-color: $white-color;
-    box-shadow: 0px -3px 10px #5858580f;
-
+    box-shadow: $footer-box-shadow;
     .label {
         margin: 20px 10px;
-        font-size: 20px;
+        font-size: $medium-font-size;
     }
 }
