--- a/pokemon-app/src/styles/gallery.scss
+++ b/pokemon-app/src/styles/gallery.scss
@@ -1,9 +1,9 @@
 @import 'variables';
+@import 'font-size.module.scss';
 
 .content {
     width: 100%;
     min-height: max-content;
-
     .gallery {
         width: 90%;
         min-height: max-content;
@@ -21,45 +21,36 @@
     margin: 20px 10px;
     border-radius: $card-border-radius;
     background-color: $white-color;
-    box-shadow: 0px 10px 15px #84848452;
-
+    box-shadow: $pokemon-card-box-shadow;
     .pokemon-image {
         width: 100%;
         margin: 30px 0px;
         height: 170px;
         border-radius: $card-border-radius;
-
         img {
-            
             width: auto;
             height: 100%;
         }
     }
-
     .pokemon-name {
         height: 50px;
-        font-size: 22px;
+        font-size: $medium-font-size;
     }
-
     .pokemon-abilities {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-
         .ability {
             width: max-content;
             height: max-content;
-            font-size: 16px;
+            font-size: $text-font-size;
             margin: 8px;
             border-radius: 20px;
-            box-shadow: 0px 5px 10px #84848436;
-
+            box-shadow: $about-box-shadow;
             span { margin: 5px 10px; }
         }
-
         .red {
             border: 2px solid $border-red;
-
             &:hover {
                 cursor: pointer;
                 background-color: $border-red;
@@ -67,16 +58,14 @@
         }
         .green {
             border: 2px solid $border-green;
-            
             &:hover {
                 cursor: pointer;
                 background-color: $border-green;
             }
         }
     }
-
     &:hover {
         cursor: pointer;
-        box-shadow: 5px 15px 15px #68686852;
+        box-shadow: $pokemon-card-hover-box-shadow;
     }
 }
