--- a/pokemon-app/src/styles/header.scss
+++ b/pokemon-app/src/styles/header.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'font-size.module.scss';
 
 header {
     height: max-content;
@@ -6,17 +7,16 @@ header {
     border-bottom-right-radius: $header-footer-border-radius;
     background-color: $white-color;
     box-shadow: 0px 5px 10px #5858580f;
-
     .logo {
         margin: 20px 10px;
-        font-size: $logo-font-size;
+        font-size: $large-font-size;
     }
 }
 
 @media screen and (max-width: 1280px) {
-    header .logo { font-size: $logo-font-size - 5px; }
+    header .logo { font-size: $large-font-size - 5px; }
 }
   
 @media screen and (max-width: 768px) {
-    header .logo { font-size: $logo-font-size - 10px; }
+    header .logo { font-size: $large-font-size - 10px; }
 }
